# audio-number-classification

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
audio_number_classification/: augmentation.py  dataset.py  logger.py  model.py  predictor.py  trainer.py
audio_number_classification/factoring/: augmentation.py  dataset.py  logger.py  model.py  trainer.py
audio_number_classification/logging/: logger.py  mlflow_logger.py  wandb_logger.py
configs/: config.yaml
data/: .gitignore  audio.dvc  test.dvc  train_annotations.csv.dvc  val_annotations.csv.dvc
models/: model.pt.dvc
results/: pred_res.csv
